@@ -1,3 +1,11 @@
+Next Release
+============
+
+Bug fixes:
+
+  * mongoc_collection_update_many and mongoc_collection_delete_many would fail
+    with the URI option retryWrites=true.
+
 mongo-c-driver 1.13.0
 =====================
 
